# devops-with-kubernetes-part3

./: .gitignore  Cargo.toml  README.md  kustomization.yaml
.github/workflows/: clean-on-branch-deletion.yaml  main.yaml
daily-todo/: Containerfile  todo.sh
log-apps/log-output/log-output-view/: Cargo.toml
log-apps/log-output/log-output-view/src/: main.rs
log-apps/log-output/manifests/: config-map.yaml  deployment.yaml  ingress.yaml  service.yaml
log-apps/ping-pong/: Cargo.toml
log-apps/ping-pong/manifests/: deployment.yaml  postgres.yaml  service.yaml
log-apps/ping-pong/src/: main.rs
manifests/: daily-todo.yaml  deployment.yaml  image-volume-claim.yaml  ingress.yaml  postgres-config.yaml  postgres.yaml  service.yaml
src/: main.rs  models.rs
templates/: index.html
