[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
axum = "0.5.8"
tower-http = { version = "0.3.4", features = ["fs"] }

tera = "1.16.0"
serde = { version = "1.0.137", features = ["derive"] }

sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }